--- a/styles/globals.css
+++ b/styles/globals.css
@@ -336,6 +336,14 @@
   position: relative;
 }
 
+.image-container-text-side{
+  height: 3rem;
+  width: 3rem;
+  /* padding-left:1.5rem;
+  padding-right:1.5rem; */
+  position: relative;
+}
+
 .drop-container{
   /* color: grey; */
   /* position: relative;
